tests/negative/conversions/conversion_implicit_float_int.tx
// EXPECTED: COMPILE_ERROR
// Description: Test implicit float to int assignment (should fail).

function main() {
    let f: float = 3.14;
    let i: int = f; // Error: Type mismatch (requires explicit cast)
}
